[gd_scene load_steps=4 format=3 uid="uid://ddw8eu16j846s"]

[ext_resource type="FontFile" uid="uid://d075w74wmper0" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/pixelFont-7-8x14-sproutLands.ttf" id="1_0fbet"]
[ext_resource type="Script" uid="uid://diae7ykr3dla2" path="res://control.gd" id="1_qtu10"]
[ext_resource type="FontFile" uid="uid://bm74bnfe2ya21" path="res://PixelOperator8.ttf" id="2_62e2m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 107.0
offset_right = 9.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qtu10")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -405.0
offset_top = -428.0
offset_right = -169.0
offset_bottom = -388.0
scale = Vector2(3.2121868, 2.5836525)

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_0fbet")
theme_override_font_sizes/font_size = 36
text = "Select A Game"

[node name="CpsLink" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -542.0
offset_top = -320.0
offset_right = -492.0
offset_bottom = -280.0
scale = Vector2(5.5746756, 5.0863023)

[node name="Game1" type="Button" parent="CpsLink"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62e2m")
text = "CPS"

[node name="RandomGame1" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -156.0
offset_top = -317.0
offset_right = -106.0
offset_bottom = -277.0
scale = Vector2(5.5746756, 5.0863023)

[node name="Game2" type="Button" parent="RandomGame1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62e2m")
text = "._."

[node name="RandomGame2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = -317.0
offset_right = 267.0
offset_bottom = -277.0
scale = Vector2(5.5746756, 5.0863023)

[node name="Game3" type="Button" parent="RandomGame2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62e2m")
text = "._."

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-6, -106)

[connection signal="pressed" from="CpsLink/Game1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="CpsLink/Game1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="RandomGame1/Game2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="RandomGame1/Game2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="RandomGame2/Game3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="RandomGame2/Game3" to="." method="_on_button_pressed"]
